# mip_me

./: README.md  execute_locally.py  requirements.txt  setup.cfg
docs/: README.md  diet_problem.ipynb
mip_me/: __init__.py  __main__.py  action_build_reports.py  action_report_builder.py  action_update_food_cost.py  app_config.py  main.py  schemas.py
test_mip_me/: execute_locally.py  local_execution.py  test_local_execution.py  test_mip_me.py
test_mip_me/data/: testing_data.xlsx
test_mip_me/data/inputs/: foods.csv  foods_nutrients.csv  nutrients.csv  testing_data.xlsx
test_mip_me/data/outputs/: buy.csv  nutrition.csv
test_mip_me/data/testing_data/: tiny_data.json
