[metadata]
name = mip_me
version = attr: mip_me.__version__
author = Aster Santana
author_email = aster.santana@mipwise.com
description = Template package for building analytics solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mipwise/mip_me
project_urls =
    Bug Tracker = https://github.com/mipwise/mip_me/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mip_me
install_requires =
    ticdat>=0.2.21
    pandas>=0.18.1
    pulp>=2.4
    gurobipy>=9.1.2
python_requires = >=3.6
